--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,14 @@
     "noEmit": true,
     "skipLibCheck": true,
     "resolveJsonModule": true,
-    "strict": true
+    "strict": true,
+    // paths
+    "baseUrl": ".",       // base path to start resolving others
+    "paths": {
+      "*": ["src/*"],
+      "@assets/*": ["assets/*"],
+      "@components/*": ["src/components/*"],
+      "@views/*": ["src/views/*"],
+    }
   }
 }
