feat(main page): main page loads with a few ScrollViews

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
       "@assets/*": ["assets/*"],
       "@components/*": ["src/components/*"],
       "@views/*": ["src/views/*"],
+      "@constants/*": ["src/constants/*"],
     }
   }
 }
